--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -21,9 +21,9 @@
     justify-content: center;
     font-size: 48px;
     margin-bottom: 30px;
-    word-spacing: 50px;
+    word-spacing: 20px;
     letter-spacing: 5px;
-    color: #fff;
+    color: #08e091;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
 }
 
@@ -44,7 +44,8 @@
     border-radius: 20px;
     padding: 25px 15px;
     font-size: 22px;
-    margin-left: 10%;
+    margin-left: 5%;
+    margin-bottom: 20px;
     align-self: flex-start;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
@@ -52,13 +53,14 @@
 
 .block__2 {
     width: 400px;
-    height: 200px;
+    height: 250px;
     border: 2px solid #62fdc4;
     border-radius: 20px;
     padding: 25px 15px;
     font-size: 22px;
-    text-align: center;
-    align-self: center;
+    margin-left: 5%;
+    margin-bottom: 20px;
+    align-self: flex-start;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
 }
@@ -70,8 +72,9 @@
     border-radius: 20px;
     padding: 25px 15px;
     font-size: 22px;
-    align-self: flex-end;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-bottom: 20px;
+    align-self: flex-start;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
 }
