--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -18,7 +18,8 @@
 
 .unusualPhoto {
     display: flex;
-    width: 100%;
+    margin-left: 3%;
+    width: 90%;
     overflow: hidden;
     margin-bottom: 15px;
     margin-right: 250px;
