--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,8 +15,8 @@
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    /* background: rgba(8, 224, 145, 0.2); */
-    background: transparent;
+    background: #fff;
+    box-shadow: 1px 2px 4px #0000006e;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,7 +32,7 @@
     opacity: 0.6;
 }
 
-.navbar li {
+.navbarItem {
     display: inline;
     position: relative;
     font-size: 22px;
@@ -41,10 +41,9 @@
     text-decoration: none;
     margin-left: 40px;
     cursor: pointer;
-    
 }
 
-.navbar li::before {
+.navbarItem::before {
     content: '';
     position: absolute;
     top: 100%;
@@ -55,6 +54,6 @@
     transition: 0.4s;
 }
 
-.navbar li:hover::before {
+.navbarItem:hover::before {
     width: 100%;
 }
