Добавлены услуги, редактирован навбар по полученной странице

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -36,7 +36,7 @@
 .photo {
     border-radius: 24px;
     object-fit: cover;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.8);;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.8);
 }
 
 .toGallery {
