--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -17,7 +17,7 @@
     top: 80px;
     left: 0;
     min-width: var(--line-width);
-    background-image: url('../../photos/RestorationGrundig2016/BKL_7277.JPG');
+    background-image: url('../photos/RestorationGrundig2016/BKL_7277.JPG');
     background-size: cover;
     background-position: right;
     height: 100%;
@@ -30,8 +30,8 @@
     left: 0;
     min-width: var(--line-width);
     height: 100%;
-    background-color: rgba(66, 133, 103, 0.2);
-    border: 2px solid rgba(66, 133, 103);
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0);
     margin-right:100px ;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
@@ -52,7 +52,7 @@
 
 
 .greetingsImage{
-    background-image: url('../../photos/restorationDiatone2017/2017-chopchop-1026.jpg');
+    background-image: url('../photos/restorationDiatone2017/2017-chopchop-1026.jpg');
     background-size: cover;
     background-position: right;
     border-radius: 40px;
@@ -63,11 +63,11 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    border: 2px solid #428567;
+    border: 1px solid #000;
     padding: 40px;
     border-radius: 40px ;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    background-color: rgba(66, 133, 103, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     font-weight: 600;
 }
 
@@ -75,11 +75,12 @@
 h1 {
     margin:0 0 20px 0 ;
     font-size: 50px;
+    text-transform: uppercase;
 }
 
 .history{
     padding: 20px ;
-    border: 2px solid rgba(66, 133, 103, 0.4);
+    border: 2px solid rgba(0, 0, 0, 0.4);
     box-shadow: 4px 4px 8px rgba(66, 133, 103, 0.4);
     background-color: whitesmoke;
     border-radius: 40px;
@@ -94,21 +95,21 @@ h1 {
 .alert-enter {
     opacity: 0;
     transform: scale(0.9);
-  }
-  .alert-enter-active {
+}
+.alert-enter-active {
     opacity: 1;
     transform: translateX(0);
     transition: opacity 500ms, transform 500ms;
-  }
-  .alert-exit {
+}
+.alert-exit {
     opacity: 1;
-  }
-  .alert-exit-active {
+}
+.alert-exit-active {
     opacity: 0;
     transform: scale(0.9);
     transition: opacity 500ms, transform 500ms;
-  }
-  
+}
+
 
 
 .text {
@@ -117,10 +118,11 @@ h1 {
     align-items: center;
     color: black;
     height: 100px;
-    border: 2px solid rgba(66, 133, 103, 0.4);
+    border: 2px solid rgba(0, 0, 0, 0.4);
     box-shadow: 4px 4px 8px rgba(66, 133, 103, 0.4);
     border-radius: 10px;
     margin-top: 12px;
+    z-index: 10;
 }
 
 .botButton {
@@ -142,21 +144,25 @@ h1 {
 }
 
 
+
+
 .alert-enter {
+    transform: translateY(50vh);
     opacity: 0;
-    transform: scale(0.9);
 }
+
 .alert-enter-active {
+    transform: translateY(0);
+    transition: all 400ms ease;
     opacity: 1;
-    transform: translateX(0);
-    transition: opacity 300ms, transform 300ms;
 }
+
 .alert-exit {
     opacity: 1;
 }
+
 .alert-exit-active {
+    transform: translateY(50vh);
+    transition: all 400ms ease;
     opacity: 0;
-    transform: scale(0.9);
-    transition: opacity 300ms, transform 300ms;
 }
-  
