--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -16,10 +16,11 @@
     width: 100%;
 }
 
-.about__header {
+.aboutHeader {
     display: flex;
     justify-content: center;
     font-size: 48px;
+    text-transform: uppercase;
     margin-bottom: 30px;
     word-spacing: 20px;
     letter-spacing: 5px;
@@ -27,7 +28,7 @@
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
 }
 
-.about__text {
+.aboutText {
     display: flex;
     flex-direction: column;
     color: #fff;
@@ -37,44 +38,42 @@
     background-attachment: fixed;
 }
 
-.block__1 {
-    width: 400px;
-    height: 250px;
+.textCard {
     border: 2px solid #428567;
+    width: 400px;
+    height: 150px;
     border-radius: 20px;
-    padding: 25px 15px;
-    font-size: 22px;
-    margin-left: 5%;
+    text-align: justify;
+    padding: 20px;
     margin-bottom: 20px;
-    align-self: flex-start;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
 }
+.card1 { align-self: flex-start; }
+.card2 { align-self: center; }
+.card3 { align-self: flex-end; }
 
-.block__2 {
-    width: 400px;
-    height: 250px;
-    border: 2px solid #428567;
-    border-radius: 20px;
-    padding: 25px 15px;
-    font-size: 22px;
-    margin-left: 5%;
-    margin-bottom: 20px;
-    align-self: flex-start;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
-}
-
-.block__3 {
-    width: 400px;
-    height: 250px;
-    border: 2.5px solid #428567;
-    border-radius: 20px;
-    padding: 25px 15px;
-    font-size: 22px;
-    margin-left: 5%;
-    margin-bottom: 20px;
-    align-self: flex-start;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
+@media screen and (max-width: 1200px) {
+    .card1, .card2, .card3 {
+        align-self: normal;
+    }
+    .about {
+        margin-top: 100px;
+    }
+    .aboutHeader {
+        font-size: 36px;
+    }
+    .aboutText {
+        background-image: url('../../photos/wires2017/BKL_7337.JPG');
+        width: 100%;
+        background-size: initial;
+        background-position-x: 50%;
+        background-position-y:40%;
+        padding: 20px;
+    }
+    .textCard {
+        padding-top: 12px;
+        font-size: 16px;
+        line-height: 18px;
+    }
 }
