--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -32,7 +32,7 @@
     margin-left: 10%;
 }
 .cleanVinylTextCardPart {
-    text-align: left;
+    text-align: justify;
     font-size: 24px;
     letter-spacing: .3px;
     text-indent: 20px;
