--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -44,7 +44,8 @@
     height: 150px;
     border-radius: 20px;
     text-align: justify;
-    padding: 20px;
+    padding: 10px 15px;
+    font-size: 17px;
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
