--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -41,11 +41,11 @@
 .textCard {
     border: 2px solid #428567;
     width: 400px;
-    height: 150px;
+    height: 200px;
     border-radius: 20px;
+    font-size: 20px;
     text-align: justify;
-    padding: 10px 15px;
-    font-size: 17px;
+    padding: 12px 16px;
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
@@ -69,12 +69,13 @@
         width: 100%;
         background-size: initial;
         background-position-x: 50%;
-        background-position-y:40%;
+        background-position-y: 28%;
         padding: 20px;
     }
     .textCard {
-        padding-top: 12px;
+        padding: 12px;
         font-size: 16px;
-        line-height: 18px;
+        width: 400px;
+        height: 160px;
     }
 }
