--- a/src/components/UI/ProductCard/productCard.module.css
+++ b/src/components/UI/ProductCard/productCard.module.css
@@ -24,3 +24,17 @@
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.8);
     border-radius: 10px;
 }
+
+
+@media screen and (max-width: 1200px) {
+
+    .productCard {
+        padding: 25px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+}
