completed module feedback for mobile devices

--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,56 +1,73 @@
-.container {
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
-    position: relative;
+.feedbackWrapper {
+    margin-top: 30px;
 }
-
-.backPhotoFeedback {
-    width: 80%;
-    height: 40%;
-    border-radius: 20px;
-}
-
-.feedbackForm {
-    position: absolute;
-    z-index: 2;
-    top: 13%;
-    left: 19.5%;
-    border: 1px solid #000;
-    border-radius: 20px;
-    width: 25%;
-    height: 70%;
-    background: rgba(66, 133, 103, 0.2);
-}
-
 .feedbackTitle {
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
+    text-align: center;
+    font-size: 50px;
     font-weight: 600;
+    text-transform: uppercase;
+    background: linear-gradient(to bottom, #428567 20%, #186607 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 25px;
 }
-
-.feedbackUnit {
+.backgroundFeedbackForm {
+    background-image: url('../../photos/JBL4325/DSC_9964.JPG');
+    background-position-x: 45%;
+    background-position-y: 40%;
+    width: 80%;
+    height: 80vh;
+    margin-left: 10%;
+    border-radius: 20px;
+}
+.feedbackForm {
     display: flex;
     flex-direction: column;
+    padding-top: 10%;
+    padding-left: 10%;
+}
+.feedbackUnit {
+    margin: 10px 0;
+    width: 30%;
 }
 .feedbackQuestion {
-    font-size: 18px;
+    padding: 6px 8px;
+    font-size: 22px;
     font-weight: 600;
-    background: #ccc;
-    opacity: 0.9;
-    margin: 20px;
-    padding: 12px 20px;
-    border-radius: 4px;
-    width: 90%;
-}
-
-.feedbackQuestion:nth-last-child() {
-    background-color: red;
+    text-align: justify;
+    color: #fff;
+    margin-bottom: 5px;
 }
 .feedbackFooter {
-    display: flex;
-    justify-content: flex-end;
-    margin: 20px 30px 0px 0px;
+    margin-left: 10%;
+    margin-bottom: 5%;
+}
+
+@media screen and (max-width: 1200px) {
+    .feedbackTitle {
+        font-size: 40px;
+    }
+    .backgroundFeedbackForm {
+        width: 100%;
+        height: 40%;
+        margin: 0;
+        background-image: none;
+        background: linear-gradient(90deg, rgba(34,73,55,0.6671043417366946) 41%, rgba(66,133,103,1) 100%);
+        border-radius: 0;
+    }
+    .feedbackForm {
+        width: 100%;
+        align-items: center;
+        padding: 0;
+    }
+    .feedbackUnit {
+        margin: 5px 0;
+        width: 90%;
+    }
+    .feedbackQuestion {
+        min-width: 300px;
+    }
+    .feedbackFooter {
+        margin-left: 0;
+    }
 }
