--- a/src/components/UI/MyInput/MyInput.module.css
+++ b/src/components/UI/MyInput/MyInput.module.css
@@ -1,12 +1,13 @@
 .myInput {
-    width: 80%;
+    width: 100%;
     border-radius: 5px;
+    min-width: 270px;
     font-size: 18px;
     font-weight: 500;
-    padding: 12px 20px;
+    padding: 6px 8px;
     box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset;
 }
 .myInput:focus {
     box-shadow: 0 0 5px rgba(66, 133, 103, 0.8);
-    border: 3px solid #000;
+    border: 2px solid #000;
 }
