--- a/src/components/UI/MyTextArea/MyTextArea.module.css
+++ b/src/components/UI/MyTextArea/MyTextArea.module.css
@@ -1,10 +1,11 @@
 .myTextArea {
-    width: 90%;
-    height: 90px;
+    width: 100%;
+    min-width: 270px;
+    height: 95px;
     border-radius: 5px;
     font-size: 15px;
     font-weight: 500;
-    padding: 12px 20px;
+    padding: 6px 8px;
     box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset;
     resize: none;
 }
