--- a/src/components/Carousel/Carousel.module.sass
+++ b/src/components/Carousel/Carousel.module.sass
@@ -1,7 +1,6 @@
 .carousel
     width: 100%
     margin: 0 auto
-
     .sliderTitle 
         display: flex
         font-size: 50px
@@ -47,24 +46,25 @@
         margin: 25px 25px 0px 0px
 
 @media screen and (max-width: 1200px)
-    .sliderTitle
-        font-size: 35px
-        margin: 25px 0px 25px 15%
-        text-indent: 15px
-    .beforeCarousel
-        display: flex
-        width: 100%
-        .photoBeforeCarousel
-            width: 80%
-            height: 60vh
-            border: none
-            margin-bottom: 10px
-    .photoBeforeCarousel:nth-last-child(-n+1)
-        margin: 0
-        margin-bottom: -20px
-    .photoRender
-        width: 100%
-    .toGallery
-        display: flex
-        justify-content: center
-        margin: 35px 0 0 0
+    .carousel
+        .sliderTitle
+            font-size: 45px
+            text-align: center
+        .beforeCarousel
+            display: flex
+            width: 100%
+            .photoBeforeCarousel
+                width: 80%
+                height: 60vh
+                border: none
+                margin-bottom: 10px
+                &:nth-last-child(-n+1)
+                    margin: 0
+                    margin-bottom: -20px
+        .beforeCarouselRender
+            .photoRender
+                width: 100%
+        .toGallery
+            display: flex
+            justify-content: center
+            margin: 35px 0 0 0
