--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -118,7 +118,7 @@
         width: 250%;
         display: flex;
         justify-content: center;
-        transform: translateY(45px);;
+        transform: translateY(45px);
         transition: all .5s;
         background-color: #ccc;
         border-radius: 5px;
