вынес цвета в отдельный файлик и указал engines versions в package.json

--- a/src/components/About/About.module.sass
+++ b/src/components/About/About.module.sass
@@ -1,3 +1,5 @@
+@import "../../_color.sass"
+
 .about
     margin-top: 150px
     .container 
@@ -10,7 +12,7 @@
             margin-bottom: 30px
             word-spacing: 20px
             letter-spacing: 5px
-            color: #428567
+            color: $gekon-green
             text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8)
         .aboutText 
             display: flex
@@ -21,7 +23,7 @@
             background-size: cover
             background-attachment: fixed
             .textCard
-                border: 2px solid #428567
+                border: 2px solid $gekon-green
                 width: 400px
                 height: 200px
                 border-radius: 20px
