--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -1,5 +1,6 @@
+@import "../../_color"
 .footer
-    background: #ededed
+    background: $footer-background
     margin-top: 30px
     .container
         .info
@@ -16,14 +17,14 @@
                         text-decoration: underline
                         text-decoration-thickness: 2px
                         text-underline-offset: 5px
-                        text-decoration-color: #428567
+                        text-decoration-color: $gekon-green
                 .socialsTitle
                     margin: 15px 0px 0px 10px
                     padding-bottom: 10px
                     text-decoration: underline
                     text-decoration-thickness: 2px
                     text-underline-offset: 5px
-                    text-decoration-color: #428567
+                    text-decoration-color: $gekon-green
                 .socialFacebook a
                     background: url('./socialLogo/facebook.svg') left no-repeat
                     background-size: 25px 19px
@@ -49,7 +50,7 @@
                     text-decoration: underline
                     text-decoration-thickness: 2px
                     text-underline-offset: 5px
-                    text-decoration-color: #428567
+                    text-decoration-color: $gekon-green
                 .connectionRequest
                     font-weight: 700
                     cursor: pointer
@@ -62,7 +63,7 @@
                         left: 0
                         width: 0
                         height: 2px
-                        background: #428567
+                        background: $gekon-green
                         transition: 0.4s
                     &:hover::before
                         width: 100%
