--- a/src/components/Navbar/Navbar.module.sass
+++ b/src/components/Navbar/Navbar.module.sass
@@ -1,3 +1,4 @@
+@import "../../_color"
 .navigation
     position: fixed
     z-index: 99
@@ -39,7 +40,7 @@
                 left: 0
                 width: 0
                 height: 2px
-                background: #428567
+                background: $gekon-green
                 transition: 0.4s
             &:hover::before
                 width: 100%
