--- a/src/components/UI/AuthorizationMenu/AuthorizationMenu.module.sass
+++ b/src/components/UI/AuthorizationMenu/AuthorizationMenu.module.sass
@@ -1,3 +1,4 @@
+@import "../../../_color"
 .authorizationMenu
     .content
         display: flex
@@ -5,7 +6,7 @@
         justify-content: center
         align-items: center
         .greetings
-            background-color: rgba(66, 133, 103, 0.8)
+            background-color: $authorization-color
             width: 600px
             height: 100px
             border: 2px solid
@@ -28,7 +29,7 @@
     .authorizationMenu
         .content
             .greetings
-                background-color: rgba(66, 133, 103, 0.8)
+                background-color: $authorization-color
                 width: 400px
                 height: 100px
                 font-size: 25px
