--- a/src/components/UI/GInput/GInput.module.sass
+++ b/src/components/UI/GInput/GInput.module.sass
@@ -1,8 +1,9 @@
+@import "../../../_color"
 .gInput
     width: 100%
     margin: 4px 0px
     padding: 5px 15px
-    border: 2px solid rgba(66, 133, 103, 0.8)
+    border: 2px solid $authorization-color
     font-size: 24px
     &:hover
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8)
