--- a/src/components/UI/MyButton/MyButton.module.sass
+++ b/src/components/UI/MyButton/MyButton.module.sass
@@ -1,7 +1,8 @@
+@import "../../../_color"
 .myButton
     padding: 8px 15px
     color: #000
-    border: 2px solid #428567
+    border: 2px solid $gekon-green
     border-radius: 6px
     font-size: 22px
     font-weight: 500
@@ -9,7 +10,7 @@
     cursor: pointer
     background: rgba(66, 133, 103, 1)
     &:active
-        background: #428567
+        background: $gekon-green
         scale: 0.96
     &:hover 
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)
