--- a/src/components/UI/ProductCard/productCard.module.sass
+++ b/src/components/UI/ProductCard/productCard.module.sass
@@ -1,6 +1,7 @@
+@import "../../../_color"
 .productCard
-    border: 2px solid #428567
-    border-image: linear-gradient(to left top,#428567 10%,  transparent 30%, transparent 70%, #428567 90%)
+    border: 2px solid $gekon-green
+    border-image: linear-gradient(to left top,$gekon-green 10%,  transparent 30%, transparent 70%, $gekon-green 90%)
     border-image-slice: 1
     padding: 30px
     max-width: 800px
@@ -14,7 +15,7 @@
         border-radius: 10px
     .productTitle
         text-transform: uppercase
-        border-bottom: 2px solid #428567
+        border-bottom: 2px solid $gekon-green
         margin-top: 12px
         font-size: 50px
     .productData
