--- a/src/components/Carousel/Carousel.module.sass
+++ b/src/components/Carousel/Carousel.module.sass
@@ -1,3 +1,4 @@
+@import '../../_color'
 .carousel
     width: 100%
     margin: 0 auto
@@ -6,7 +7,7 @@
         font-size: 50px
         text-transform: uppercase
         font-weight: 600
-        background: linear-gradient(45deg, #02cf84 55%,  #428567)
+        background: linear-gradient(45deg, #02cf84 55%,  $gekon-green)
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
         margin-top: 50px
