--- a/src/components/Feedback/Feedback.module.sass
+++ b/src/components/Feedback/Feedback.module.sass
@@ -1,3 +1,4 @@
+@import '../../_color'
 .feedbackWrapper
     margin-top: 30px
     .container
@@ -6,7 +7,7 @@
             font-size: 50px
             font-weight: 600
             text-transform: uppercase
-            background: linear-gradient(to bottom, #428567 20%, #186607 90%)
+            background: linear-gradient(to bottom, $gekon-green 20%, #186607 90%)
             -webkit-background-clip: text
             -webkit-text-fill-color: transparent
             margin-bottom: 25px
