--- a/src/components/Services/Services.module.sass
+++ b/src/components/Services/Services.module.sass
@@ -1,3 +1,4 @@
+@import '../../_color'
 .services
     margin-top: 30px
     .container
@@ -8,7 +9,7 @@
                 font-size: 50px
                 text-transform: uppercase
                 font-weight: 600
-                background: linear-gradient(to bottom, #428567 20%, #186607 90%)
+                background: linear-gradient(to bottom, $gekon-green 20%, #186607 90%)
                 -webkit-background-clip: text
                 -webkit-text-fill-color: transparent
                 margin-bottom: 50px
@@ -16,8 +17,8 @@
                 display: flex
                 justify-content: space-around
                 .cleanVinylTextCard
-                    border: 2px solid #428567
-                    border-image: linear-gradient(to left top,#428567 10%,  transparent 30%, transparent 70%, #428567 90%)
+                    border: 2px solid $gekon-green
+                    border-image: linear-gradient(to left top,$gekon-green 10%,  transparent 30%, transparent 70%, $gekon-green 90%)
                     border-image-slice: 1
                     padding: 30px
                     max-width: 800px
@@ -40,7 +41,7 @@
                 font-size: 50px
                 text-transform: uppercase
                 font-weight: 600
-                background: linear-gradient(to bottom, #186607 20%, #428567 90%)
+                background: linear-gradient(to bottom, #186607 20%, $gekon-green 90%)
                 -webkit-background-clip: text
                 -webkit-text-fill-color: transparent
                 margin-top: 40px
