--- a/src/components/Feedback/Feedback.module.sass
+++ b/src/components/Feedback/Feedback.module.sass
@@ -24,6 +24,7 @@
                 flex-direction: column
                 padding-top: 10%
                 padding-left: 10%
+                margin-left: 5%
                 .feedbackUnit
                     margin: 10px 0
                     width: 30%
@@ -61,3 +62,4 @@
                             min-width: 300px
                     .feedbackFooter
                         margin-left: 0
+
